--- a/src/assets/config.html
+++ b/src/assets/config.html
@@ -14,53 +14,43 @@
     <script type="text/javascript" src="bootstrap/package/dist/js/bootstrap.js"></script>
 
     <script src="js/jquery-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/configurationpage.css" />
 </head>
 <body>
-<div class="container">
+<div class="main">
+    <div class="wrapper">
+        <div class="container">
     <div class="row">
-        <div class="col-lg-4 offset-lg-4"><h3 style="width:100%; text-align:center;">Barcode Printing</h3></div>
+        <div class="col-lg-4 offset-lg-4"><h3 style="width:100%; text-align:center;">Secondary Display Settings</h3></div>
     </div>
     <div class="row">
         <div class="table-responsive">
             <table class="table table-bordered table-striped">
                 <tbody>
                 <tr>
-                    <td>First Heading</td><td><input class="form-control" id="heading1" name="heading1" type="text" /></td>
-                    <td>Second Heading</td><td><input class="form-control" id="heading2" name="heading2" type="text" /></td>
+                    <td>URL For Secondary Display Page</td><td><input class="form-control" id="secondarydisplayurl" name="secondarydisplayurl" type="text" /></td>
                 </tr>
-
                 <tr>
-                    <td>Model Name</td><td><input class="form-control" id="modelname" name="modelname" type="text" /></td>
-                    <td>Size(Units)</td><td><input placeholder="Inch" class="form-control" id="sizeunits" name="sizeunits" type="text" /></td>
+                    <td>Advertisements Display URL</td><td><input class="form-control" id="advertisementsdisplayurl" name="advertisementsdisplayurl" type="text" /></td>
                 </tr>
 
 
                 <tr>
-                    <td>Size Value</td><td><input class="form-control" placeholder="80X30X5" id="sizevalue" name="sizevalue" type="text" /></td>
-                    <td>Product Ref No</td><td><input class="form-control" id="productrefnum" name="productrefnum" type="text" placeholder="JFFD" /></td>
-                </tr>
-
-                <tr>
-                    <td>Product Code</td><td><input class="form-control" id="productcode" name="productcode" type="text" placeholder="BDEF" /></td>
-                    <td>Mfg Date</td><td><input class="form-control" id="manufacturingdate" name="manufacturingdate" type="text" placeholder="Sept 2017" /></td>
-                </tr>
+                    <td style="text-align:center;">
+                                <button class="btn btn-lg btn-primary" onclick="javascript:goToSecondaryDisplayPage();"><i class="fa fa-chevron-right"></i> Go</button>
 
 
-                <tr>
-                    <td>MRP</td><td><input class="form-control" id="mrp" name="mrp" type="text" placeholder="2000/-" /></td>
-
-                    <td>Barcode Text</td><td><input class="form-control" id="barcodetext" name="barcodetext" type="text" placeholder="DUAP7750" /></td>
-                </tr>
-
-                <tr>
-                    <td style="text-align:center;" colspan="4">
-                        <button class="btn btn-primary" onclick="javascript:printBarcodes();"><i class="fa fa-print"></i> Print</button>
+                    </td>
+                    <td style="text-align:center;">
+                        <button class="btn btn-lg btn-success" onclick="javascript:savePreferences();"><i class="fa fa-save"></i> Save</button>
                     </td>
                 </tr>
                 </tbody>
             </table>
         </div>
 
+    </div>
+    </div>
     </div>
 </div>
 </body>
@@ -95,5 +85,5 @@ function getJsConnector() {
 };
 </script>
 
-<script src="js/barcodeprinter.js"></script>
+<script src="js/configuration.js"></script>
 </html>
